packages/yew-macro/tests/function_component_attr/bad-name-fail.stderr
error: expected identifier, found keyword `let`
 --> tests/function_component_attr/bad-name-fail.rs:8:22
  |
8 | #[function_component(let)]
  |                      ^^^

error: unexpected token
  --> tests/function_component_attr/bad-name-fail.rs:17:23
   |
17 | #[function_component(x, y, z)]
   |                       ^

error: expected identifier
  --> tests/function_component_attr/bad-name-fail.rs:26:22
   |
26 | #[function_component(124)]
   |                      ^^^

error: the component must not have the same name as the function
  --> tests/function_component_attr/bad-name-fail.rs:35:22
   |
35 | #[function_component(component)]
   |                      ^^^^^^^^^
